[project]
name = "telegram-game-bot"
version = "1.0.0"
description = "Telegram Game Distribution Bot"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
