[project]
name = "telegram-game-bot"
version = "1.0.0"
description = "Telegram Game Distribution Bot"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your-email@example.com"}
]
dependencies = [
    "requests>=2.31.0",
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["channel_bot", "index"]
